# cmd/contentmanagement/docs/swagger.json
@@ -12,9 +12,33 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "",
+    "basePath": "/",
     "paths": {
-        "/contentmanagement/workspace": {
+        "/contentmanagement/workspaces": {
+            "get": {
+                "description": "List workspaces",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "List workspaces",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/query.ListWorkspaceResult"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new workspace",
                 "tags": [
@@ -53,7 +77,7 @@
                 }
             }
         },
-        "/contentmanagement/workspace/{workspace}": {
+        "/contentmanagement/workspaces/{workspace}": {
             "get": {
                 "description": "Get workspace by id",
                 "tags": [
@@ -117,206 +141,6 @@
                             "$ref": "#/definitions/workspace.Workspace"
                         }
                     },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.GenericError"
-                        }
-                    }
-                }
-            }
-        },
-        "/contentmanagement/workspace/{workspace}/tag": {
-            "get": {
-                "description": "List all tags in workspace",
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "List all tags in workspace",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "uuid formatted ID.",
-                        "name": "workspace",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/query.Tag"
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.GenericError"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Creates a tag in given workspace",
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Create tag",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "uuid formatted ID.",
-                        "name": "workspace",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Tag",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/workspace.TagBody"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/workspace.Workspace"
-                        },
-                        "headers": {
-                            "Location": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.GenericError"
-                        }
-                    }
-                }
-            }
-        },
-        "/contentmanagement/workspace/{workspace}/tag/{tag}": {
-            "get": {
-                "description": "Get tag by id",
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Get tag",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "uuid formatted ID.",
-                        "name": "workspace",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "name",
-                        "name": "tag",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/query.Tag"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.GenericError"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update tag by id",
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Update tag",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "uuid formatted ID.",
-                        "name": "workspace",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "name",
-                        "name": "tag",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Tag",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/query.Tag"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.GenericError"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete tag by id",
-                "tags": [
-                    "workspace"
-                ],
-                "summary": "Delete tag",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "uuid formatted ID.",
-                        "name": "workspace",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "tag id",
-                        "name": "tag",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
                     "default": {
                         "description": "",
                         "schema": {
@@ -823,6 +647,14 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1051,6 +883,206 @@
                             "$ref": "#/definitions/models.OKResult"
                         }
                     },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            }
+        },
+        "/contentmanagement/workspaces/{workspace}/tag": {
+            "get": {
+                "description": "List all tags in workspace",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "List all tags in workspace",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/query.Tag"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a tag in given workspace",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Create tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Tag",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/workspace.TagBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/workspace.Workspace"
+                        },
+                        "headers": {
+                            "Location": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            }
+        },
+        "/contentmanagement/workspaces/{workspace}/tag/{tag}": {
+            "get": {
+                "description": "Get tag by id",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Get tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/query.Tag"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update tag by id",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Update tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Tag",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/query.Tag"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.GenericError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete tag by id",
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Delete tag",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "uuid formatted ID.",
+                        "name": "workspace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tag id",
+                        "name": "tag",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
                     "default": {
                         "description": "",
                         "schema": {
@@ -1349,6 +1381,17 @@
                 "description": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "query.ListWorkspaceResult": {
+            "type": "object",
+            "properties": {
                 "id": {
                     "type": "string"
                 },
